--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -1,72 +1,81 @@
-<h1><%= @project.name %> : Manage Members</h1>
+<div class="page-header">
+  <h1><%= @project.name %>: Manage Members </h1>
+</div>
 
 <ol class="breadcrumb">
-  <li><a><%= link_to "Projects", projects_path %> </a></li>
-  <li><a> <%= link_to @project.name, project_path(@project) %></a></li>
-  <li class= "active">Memberships</li>
+  <li><a href="/projects">Projects</a></li>
+  <li><%= link_to @project.name, @project %></li>
+  <li class="active">Memberships</li>
 </ol>
 
-  <div>
-    <%= render 'shared/shared_errors', model: @membership %>
-  </div>
-
-  <%= form_for([@project,@membership], html: {class: "form-horizonal"}) do |f| %>
-
-      <div class="well form-inline col-md-5">
-        <%= f.label :user_id %>
-        <%= f.collection_select :user_id, User.all, :id, :full_name,
-          {include_blank: "Please select.."},
-          {class: "dropdown-toggle form-control"} %>
-        <%= f.select(:role, ["Member", "Owner"], {}, {class: "form-control"}) %>
-        <%= f.submit "Add new member", class: "btn btn-primary" %>
+  <% if @membership !=nil %>
+    <div class="form-horizontal">
+      <div class="form-group">
+          <div class="col-sm-6">
+            <%= render "shared/shared_errors", model: @membership %>
+        </div>
       </div>
+    </div>
   <% end %>
 
-<div class="col col-sm-8">
-  <table class="table">
-    <thead>
-        <tr>
-            <th>
 
-            </th>
-            <th>
+<% membership = Membership.new %>
+<%= form_for [@project, membership] do |f| %>
+<div class="form-inline">
+  <div class="col-sm-5 well">
+    <div class="form-group">
+      <%= f.collection_select :user_id, User.all, :id, :full_name,
+      {include_blank: "Please select a user"},
+      {class: "form-control"}%>
+    </div>
 
-            </th>
-            <th>
+    <div class="form-group">
+      <%= f.select :role, ["member", "owner"], {}, {class:"form-control"} %>
+    </div>
 
-            </th>
-            <th>
-
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-      <% @project.users.order(:first_name).each do |user| %>
-        <% user.memberships.where(project_id: @project).each do |membership| %>
-            <%= form_for([@project,membership]) do |f| %>
-              <tr>
-                <td>
-              <%= link_to user.full_name,
-              user_path(user) %>
-                </td>
-              <td>
-              <%= f.select(:role, ["Owner","Member"]) %>
-              </td>
-              <td>
-              <%= f.submit class: "btn btn-primary" %>
-              </td>
-              <td>
-              <%= link_to "", project_membership_path(
-              @project,membership
-              ),
-              method: :delete, data: {
-              confirm: "Are you sure you want to delete this user?"
-              }, class: "glyphicon glyphicon-remove" %>
-              </td>
-            </tr>
-            <% end %>
-        <% end %>
-      <% end %>
-    </tbody>
-  </table>
+    <div class="form-group">
+      <%= f.submit "Add New Member", class:"btn btn-primary form-control"%>
+    </div>
+  </div>
 </div>
+
+<% end %>
+<br><br><br><br><br>
+<!-- can refactor this round about in the controller by newing up only membership not project.membership and then defining new'd up to the project or redifining instance variable in else -->
+<% @project.users.each do |user| %>
+<% user.memberships.where(project_id: @project.id).each do |membership| %>
+<%= form_for [@project, membership] do |f| %>
+<div class="form-inline">
+  <div class = "row">
+    <div class="col-sm-2">
+      <div class="form-group">
+        <%= link_to membership.user.full_name, user_path(user) %>
+      </div>
+    </div>
+
+    <div class="col-sm-1">
+      <div class="form-group">
+        <%= f.select :role, ["member", "owner"], {}, {class:"form-control"} %>
+      </div>
+    </div>
+
+    <div class="col-sm-1">
+      <div class="form-group">
+        <%= f.submit "Update", class:"btn btn-primary"%>
+      </div>
+    </div>
+
+    <% unless ((@project.memberships.where(role: "owner").count - 1) == 0) && membership.role == "owner" %>
+    <div class ="col-sm-6">
+      <div class ="form-group">
+        <%= link_to "", project_membership_path(@project, membership), class:"glyphicon glyphicon-remove", method: :delete, data:{confirm: "Are you sure you want to delete this membership?"} %>
+      </div>
+    </div>
+    <% end %>
+</div>
+
+</div>
+<% end %>
+<% end %>
+<br>
+<% end %>
