--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,22 +1,25 @@
 <div class="page-header">
-  <h1>Tasks for <%= @project.name %>
-  <%= link_to 'Create Task', new_project_task_path(@project,@task),
-  class: "btn btn-info btn-large pull-right" %>
-  </h1>
-  <div class= "pull-right">
+  <div class="pull-right">
+    <small>
     <%= link_to_unless_current 'All', project_tasks_path(sort_by: "all")  %> |
     <%if params[:sort_by] == nil%>
       Incomplete
     <%else%>
       <%= link_to 'Incomplete', project_tasks_path %>
     <%end%>
+    <%= link_to 'Create Task', new_project_task_path(@project,@task), class: "btn btn-info btn-large"%>
+    </small>
   </div>
-      <ol class="breadcrumb">
-        <li><a><%= link_to "Projects", projects_path %> </a></li>
-        <li><a><%= link_to @project.name, project_path(@project) %> </a></li>
-        <li class= "active">Tasks</li>
-      </ol>
-  </div>
+  <h1>Tasks for <%= @project.name %></h1>
+</div>
+
+<div>
+  <ol class="breadcrumb">
+    <li><a><%= link_to "Projects", projects_path %> </a></li>
+    <li><a><%= link_to @project.name, project_path(@project) %> </a></li>
+    <li class= "active">Tasks</li>
+  </ol>
+</div>
 
   <table class="table">
     <thead>
