--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -8,74 +8,22 @@
   <li class="active">Memberships</li>
 </ol>
 
-  <% if @membership !=nil %>
-    <div class="form-horizontal">
-      <div class="form-group">
-          <div class="col-sm-6">
-            <%= render "shared/shared_errors", model: @membership %>
-        </div>
+<% if @membership !=nil %>
+  <div class="form-horizontal">
+    <div class="form-group">
+      <div class="col-sm-6">
+        <%= render "shared/shared_errors", model: @membership %>
       </div>
-    </div>
-  <% end %>
-
-
-<% membership = Membership.new %>
-<%= form_for [@project, membership] do |f| %>
-<div class="form-inline">
-  <div class="col-sm-5 well">
-    <div class="form-group">
-      <%= f.collection_select :user_id, User.all, :id, :full_name,
-      {include_blank: "Please select a user"},
-      {class: "form-control"}%>
-    </div>
-
-    <div class="form-group">
-      <%= f.select :role, ["member", "owner"], {}, {class:"form-control"} %>
-    </div>
-
-    <div class="form-group">
-      <%= f.submit "Add New Member", class:"btn btn-primary form-control"%>
     </div>
   </div>
-</div>
-
 <% end %>
-<br><br><br><br><br>
-<!-- can refactor this round about in the controller by newing up only membership not project.membership and then defining new'd up to the project or redifining instance variable in else -->
-<% @project.users.each do |user| %>
-<% user.memberships.where(project_id: @project.id).each do |membership| %>
-<%= form_for [@project, membership] do |f| %>
-<div class="form-inline">
-  <div class = "row">
-    <div class="col-sm-2">
-      <div class="form-group">
-        <%= link_to membership.user.full_name, user_path(user) %>
-      </div>
-    </div>
 
-    <div class="col-sm-1">
-      <div class="form-group">
-        <%= f.select :role, ["member", "owner"], {}, {class:"form-control"} %>
-      </div>
-    </div>
-
-    <div class="col-sm-1">
-      <div class="form-group">
-        <%= f.submit "Update", class:"btn btn-primary"%>
-      </div>
-    </div>
-
-    <% unless ((@project.memberships.where(role: "owner").count - 1) == 0) && membership.role == "owner" %>
-    <div class ="col-sm-6">
-      <div class ="form-group">
-        <%= link_to "", project_membership_path(@project, membership), class:"glyphicon glyphicon-remove", method: :delete, data:{confirm: "Are you sure you want to delete this membership?"} %>
-      </div>
-    </div>
-    <% end %>
-</div>
-
-</div>
-<% end %>
-<% end %>
-<br>
+<% membership = Membership.new %>
+<% current_memberships = @project.memberships.where(user_id: current_user.id) %>
+<% current_memberships.each do |member| %>
+  <% if (member.role == "owner") || (current_user.admin == true) %>
+    <%= render "owner" %>
+  <% else %>
+    <%= render "member" %>
+  <% end %>
 <% end %>
